# gohs

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  Dockerfile  Gopkg.toml  LICENSE-MIT  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  codacy.yml  docker.yml  lint.yml
.travis/: build-hyperscan.sh  setup-travis.sh
bench/: README.md
bench/cpp/: scan_test.cpp
bench/go/: chimera_test.go  scan_test.go
cbench/: CMakeLists.txt  README.md  scan_test.cpp  scan_test.h.in
chimera/: api.go  api_test.go  block.go  common.go  common_test.go  common_v54.go  compile.go  compile_test.go  doc.go  example_api_test.go  example_compile_test.go  example_runtime_test.go  internal.go  pattern.go  pattern_test.go  runtime.go  runtime_test.go  scratch.go
examples/pcapscan/: main.go  patterns
examples/simplegrep/: main.go
hyperscan/: api.go  api_test.go  block.go  common.go  common_test.go  compile.go  compile_test.go  compile_v5.go  compile_v5_test.go  doc.go  example_api_test.go  example_compile_test.go  example_runtime_test.go  handle.go  handle_go1_15.go  handle_go1_17.go  handle_go1_9.go  internal.go  internal_test.go  internal_v5.go  internal_v54.go  internal_v5_2.go  literal.go  literal_test.go  literal_v52.go  literal_v52_test.go  pattern.go  pattern_test.go  patterns.go  patterns_test.go  platform.go  platform_test.go  platform_v54.go  runtime.go  runtime_test.go  scratch.go  stream.go  vectored.go
hyperscan/handle/: handle.go
internal/ch/: allocator.go  common.go  (+11 more)
tests/: CMakeLists.txt  scan_test.cpp  scan_test.go  scan_test.h.in
(+23 files in other folders)
